# End-to-End-Agentic-Customer-Support-System

./: .gitignore  README.md  pyproject.toml
app/: llm_provider.py  main.py  test_llm.py
app/graph/: build_graph.py  chitchat_agent.py  escalation_agent.py  kb_agent.py  nodes_stub.py  state.py  supervisor.py  ticket_agent.py
app/rag/: build_index.py  retriever.py  test_retrieval.py
data/: faqs.json
frontend/src/: App.jsx  api.js
frontend/src/components/: AgentDecisionPanel.jsx  ChatPanel.jsx
